--- a/Maquina de vending/Maquina de vending.csproj
+++ b/Maquina de vending/Maquina de vending.csproj
@@ -49,6 +49,7 @@
     <Compile Include="ProductosElectronicos.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
